# TangoEngine

./: CMakeLists.txt
Shaders/: crosshair.glsl  crosshairVert.glsl  frag.glsl  fragSkybox.glsl  gBufferFrag.glsl  gBufferVert.glsl  glyphShaderFrag.glsl  glyphShaderVert.glsl  terrainVert.glsl  vert.glsl
include/: FastNoiseLite.h
resources/: frag.glsl  light.glsl  vert.glsl
resources/Shaders/: deferredLightFrag.glsl  defferedLightFrag.glsl  defferedLightVert.glsl  directionalLight.glsl  frag.glsl  fragFrameBuffer.glsl  fragSkydome.glsl  geometry.geom  glyphShaderFrag.glsl  instancedVert.glsl  lightBlock.glsl  normalsFrag.glsl  normalsGeom.geom  normalsVert.glsl  shaderSingleColor.glsl  shadow_vert.glsl  shieldFrag.glsl  shieldVert.glsl  skyboxBlockFrag.glsl  skyboxBlockVert.glsl  terrainFrag.glsl  terrainTCS.glsl  terrainTCS.tcs  terrainTES.glsl  terrainTES.tes  terrainVert.glsl  vert.glsl  vertFrameBuffer.glsl  vertSkybox.glsl  vertSkydome.glsl  waterFrag.glsl  waterVert.glsl
resources/Shaders/OGLDEV deferred light tutorials/: dirLightPassFrag.glsl  ligtPassVert.glsl  pointLightPassFrag.glsl
src/: AssimpLoader.cpp  BatchRenderer.cpp  BatchRenderer.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  Controler.cpp  Controler.h  Crosshair.cpp  Crosshair.h  EBO.cpp  EBO.h  FBO.cpp  FBO.h  FactoryMesh.cpp  FactoryMesh.h  FaultFormationTerrain.cpp  FaultFormationTerrain.h  FontSystem.cpp  FontSystem.h  FractalNoiseTerrain.cpp  FractalNoiseTerrain.h  FrustumCulling.cpp  FrustumCulling.h  GBuffer.cpp  GBuffer.h  GeomipGrid.cpp  GeomipGrid.h  HeightsGenerator.h  Includes.h  Initializer.cpp  Initializer.h  Light.cpp  Light.h  LightManager.cpp  LightManager.h  LodManager.cpp  LodManager.h  Material.cpp  (+67 more)
src/src/: AssimpLoader.h  Camera.cpp  Controler.cpp  EBO.cpp  FBO.cpp  FBO.h  FactoryMesh.cpp  FactoryMesh.h  Headers.h  HeightsGenerator.cpp  HeightsGenerator.h  Initializer.cpp  Light.cpp  Light.h  LightManager.cpp  LightManager.h  Material.h  Model.cpp  Model.h  ModelManager.cpp  ModelManager.h  MousePicker.cpp  PhysicsEquations.h  Player.cpp  Player.h  Primitive.h  PrimitivesManager.cpp  Program.cpp  Renderer.h  SceneManager.h  Shader.h  Skybox.cpp  Skybox.h  TeleportSystem.cpp  Terrain.cpp  Terrain.h  TextureManager.cpp  Timer.h  UBO.cpp  UBO.h  (+9 more)
